# uniform

./: .gitignore  ARCHITECTURE.md  COVERAGE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/compression/: gzip.rs
src/config/: vars.rs
src/crypto/: aes_cbc.rs
src/query/: alter.rs  cache.rs  command.rs  condition.rs  create.rs  drop.rs  engine.rs  insert.rs  insert_pipeline.rs  mod.rs  planner.rs  select.rs  set.rs  show.rs
src/server/: connection.rs  fastcgi.rs  http.rs  listener.rs  mod.rs  redis.rs
src/server/mysql/: constants.rs  handler.rs  mod.rs  protocol.rs  resultset.rs
src/store/: index.rs  long_poll.rs  mod.rs  proc.rs  registry.rs  table.rs  worker.rs
src/types/: mod.rs  query_response.rs  row.rs  value.rs
src/util/: cluster.rs  escape.rs  json.rs  logging.rs  metrics.rs  mod.rs  template.rs
src/worker/: base.rs  buffer_appl.rs  exec_query.rs  mod.rs  mysql_data_transfer.rs  push_to_cloud_storage.rs  push_to_elasticsearch.rs  push_to_email.rs  push_to_fastcgi.rs  push_to_file.rs  push_to_pagerduty.rs  push_to_slack.rs  push_to_stderr.rs  push_to_stdout.rs
tests/: docker-compose.load.yml  docker-compose.test.yml  integration.py  load_test.py
tests/docker/: echo.php  load-test-mysql-init.sql  load-test.uniform  mysql-init.sql  nginx.conf  php-fpm-pool.conf
