[package]
name = "uniform"
version = "0.9.0"
edition = "2021"
description = "In-memory message queue / stream processing engine"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "6"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.53"
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
aes = "0.8"
cbc = "0.1"
rand = "0.8"
flate2 = "1"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
hostname = "0.4"
lettre = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
aws-sdk-s3 = "1"
aws-config = "1"
sha2 = "0.10"
once_cell = "1"
bytes = "1"
openssl = { version = "0.10", features = ["vendored"] }
